fix some content-page layout issues

--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -85,11 +85,6 @@
 		width: 100%;
 	}
 	
-	.tabcontent {
-		width:300px;
-		margin-bottom: 60px;
-	}
-	
 	.todayHours {
 		position: relative;
 		top: auto;
